codepkg/objects/CFAA__c.object
<CustomObject>
    <fields>
        <fullName>CFAA_Processed_for_Salary_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that after the creation of new CFAA records, batch job is run to make sure copies of Salary Survey records are created and new CFAA rates are applied</description>
        <label>CFAA Processed for Salary Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Admin_Rate__c</fullName>
        <label>Default Admin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>END_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>CFAA Rate Letter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>END_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CFAA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFAA Rate Letter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>